Fixed clipping corner background shadow

--- a/src/scss/components/_progressBar.scss
+++ b/src/scss/components/_progressBar.scss
@@ -2,7 +2,6 @@ $corner-radius: 4px;
 
 .progress-bar {
     width: 100%;
-    background-color: black;
     box-sizing: border-box;
     border-radius: 0 $corner-radius $corner-radius 0;
 
